src/compilador/y.output
   0  $accept : programa $end

   1  programa : nombre_programa '{' sentencias '}'
   2           | '{' sentencias '}'
   3           | nombre_programa sentencias '}'
   4           | nombre_programa '{' sentencias
   5           | nombre_programa '{' '}'

   6  nombre_programa : ID

   7  sentencias : sentencia
   8             | sentencias sentencia

   9  sentencia : sentencia_declarativa
  10            | sentencia_ejecutable

  11  sentencia_declarativa : sentencia_declarativa_variables
  12                        | funcion_con_return
  13                        | funcion_sin_return
  14                        | declaracion_constantes

  15  sentencia_declarativa_variables : tipo lista_de_variables ';'
  16                                  | tipo lista_de_variables
  17                                  | lista_de_variables ';'
  18                                  | tipo ';'

  19  lista_de_variables : ID ',' lista_de_variables
  20                     | ID

  21  funcion_con_return : encabezado_funcion '{' sentencia_return '}'
  22                     | encabezado_funcion '{' sentencias_funcion sentencia_return '}'
  23                     | encabezado_funcion '{' '}'

  24  sentencias_funcion : sentencia_funcion
  25                     | sentencias_funcion sentencia_funcion

  26  sentencia_funcion : sentencia_declarativa
  27                    | sentencia_ejecutable_funcion

  28  sentencia_ejecutable_funcion : asignacion
  29                               | DEFER asignacion
  30                               | imprimir
  31                               | DEFER imprimir
  32                               | sentencia_when_con_return
  33                               | DEFER sentencia_when_con_return
  34                               | sentencia_do_con_return
  35                               | DEFER sentencia_do_con_return
  36                               | sentencia_seleccion_simple_con_return
  37                               | DEFER sentencia_seleccion_simple_con_return

  38  sentencias_ejecutables_funcion : sentencia_ejecutable_funcion
  39                                 | sentencias_ejecutables_funcion sentencia_ejecutable_funcion

  40  funcion_sin_return : encabezado_funcion '{' sentencia_seleccion_compuesta_con_return '}'
  41                     | encabezado_funcion '{' sentencias_funcion sentencia_seleccion_compuesta_con_return '}'

  42  sentencia_seleccion_compuesta_con_return : IF '(' condicion ')' THEN sentencia_seleccion_compuesta_con_return_simple ELSE sentencia_seleccion_compuesta_con_return_simple ENDIF ';'
  43                                           | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_return '}' ELSE sentencia_seleccion_compuesta_con_return_simple ENDIF ';'
  44                                           | IF '(' condicion ')' THEN sentencia_seleccion_compuesta_con_return_simple ELSE '{' sentencias_ejecutables_funcion sentencia_return '}' ENDIF ';'
  45                                           | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_return '}' ELSE '{' sentencias_ejecutables_funcion sentencia_return '}' ENDIF ';'

  46  sentencia_seleccion_compuesta_con_return_simple : sentencia_return
  47                                                  | sentencia_seleccion_compuesta_con_return
  48                                                  | DEFER sentencia_seleccion_compuesta_con_return

  49  sentencia_seleccion_simple_con_return : IF '(' condicion ')' THEN sentencia_return ENDIF ';'
  50                                        | IF '(' condicion ')' THEN sentencia_seleccion_compuesta_con_return ENDIF ';'
  51                                        | IF '(' condicion ')' THEN sentencia_ejecutable_funcion ENDIF ';'
  52                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_return '}' ENDIF ';'
  53                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_seleccion_compuesta_con_return '}' ENDIF ';'
  54                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_return '}' ELSE '{' sentencias_ejecutables_funcion '}' ENDIF ';'
  55                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_return '}' ELSE sentencia_ejecutable_funcion ENDIF ';'
  56                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_seleccion_compuesta_con_return '}' ELSE sentencia_ejecutable_funcion ENDIF ';'
  57                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion sentencia_seleccion_compuesta_con_return '}' ELSE '{' sentencias_ejecutables_funcion '}' ENDIF ';'
  58                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion '}' ELSE '{' sentencias_ejecutables_funcion sentencia_return '}' ENDIF ';'
  59                                        | IF '(' condicion ')' THEN '{' sentencias_ejecutables_funcion '}' ELSE '{' sentencias_ejecutables_funcion sentencia_seleccion_compuesta_con_return '}' ENDIF ';'

  60  sentencia_when_con_return : WHEN '(' condicion ')' THEN '{' sentencia_funcion '}' ';'
  61                            | WHEN '(' condicion ')' THEN '{' sentencia_funcion sentencia_return '}' ';'
  62                            | WHEN '(' condicion ')' THEN '{' sentencia_funcion sentencia_seleccion_compuesta_con_return '}' ';'

  63  sentencia_do_con_return : DO bloque_sentencias_ejecutables_do_con_return UNTIL '(' condicion ')' ';'
  64                          | etiqueta ':' DO bloque_sentencias_ejecutables_do_con_return UNTIL '(' condicion ')' ';'

  65  bloque_sentencias_ejecutables_do_con_return : sentencia_return
  66                                              | sentencia_seleccion_compuesta_con_return
  67                                              | sentencias_ejecutables_do_funcion
  68                                              | '{' sentencias_ejecutables_do_funcion sentencia_return '}'
  69                                              | '{' sentencias_ejecutables_do_funcion sentencia_seleccion_compuesta_con_return '}'
  70                                              | '{' sentencias_ejecutables_do_funcion '}'

  71  sentencias_ejecutables_do_funcion : sentencia_ejecutable_do_funcion
  72                                    | sentencias_ejecutables_do_funcion sentencia_ejecutable_do_funcion

  73  sentencia_ejecutable_do_funcion : sentencia_ejecutable_funcion
  74                                  | sentencia_break
  75                                  | sentencia_continue

  76  encabezado_funcion : FUN ID '(' ')' ':' tipo
  77                     | FUN ID '(' lista_de_parametros ')' ':' tipo
  78                     | FUN ID '(' ')' ':'
  79                     | FUN '(' ')' ':' tipo
  80                     | FUN ID ')' ':' tipo
  81                     | FUN ID '(' ':' tipo
  82                     | FUN ID '(' lista_de_parametros ')' ':'
  83                     | FUN '(' lista_de_parametros ')' ':' tipo
  84                     | FUN ID lista_de_parametros ')' ':' tipo
  85                     | FUN ID '(' lista_de_parametros ':' tipo

  86  sentencia_return : RETURN '(' expresion ')' ';'
  87                   | RETURN '(' expresion ')'
  88                   | RETURN expresion ')'
  89                   | RETURN '(' expresion
  90                   | RETURN '(' ')' ';'

  91  lista_de_parametros : parametro
  92                      | parametro ',' parametro
  93                      | parametro ',' parametro ',' lista_parametros_exceso

  94  lista_parametros_exceso : parametro
  95                          | parametro ',' lista_parametros_exceso

  96  parametro : tipo ID
  97            | tipo

  98  $$1 :

  99  parametro : $$1 ID

 100  declaracion_constantes : CONST lista_declaracion_constantes ';'
 101                         | CONST lista_declaracion_constantes
 102                         | CONST ';'

 103  lista_declaracion_constantes : declaracion_constante
 104                               | declaracion_constante ',' lista_declaracion_constantes

 105  declaracion_constante : ID ASIGNACION CTE
 106                        | ID ASIGNACION
 107                        | ID CTE
 108                        | ID

 109  sentencia_ejecutable : asignacion
 110                       | DEFER asignacion
 111                       | seleccion
 112                       | DEFER seleccion
 113                       | imprimir
 114                       | DEFER imprimir
 115                       | sentencia_when
 116                       | DEFER sentencia_when
 117                       | sentencia_do
 118                       | DEFER sentencia_do

 119  sentencia_ejecutable_do : sentencia_ejecutable
 120                          | sentencia_break
 121                          | sentencia_continue

 122  sentencia_break : BREAK ';'
 123                  | BREAK ':' etiqueta ';'
 124                  | BREAK
 125                  | BREAK ':' etiqueta
 126                  | BREAK ':' ';'

 127  sentencia_continue : CONTINUE ';'
 128                     | CONTINUE

 129  sentencia_do : sentencia_do_simple
 130               | etiqueta ':' sentencia_do_simple

 131  sentencia_do_simple : DO bloque_sentencias_ejecutables_do UNTIL '(' condicion ')' ';'
 132                      | DO bloque_sentencias_ejecutables_do UNTIL '(' condicion ')'
 133                      | DO bloque_sentencias_ejecutables_do UNTIL '(' ')' ';'
 134                      | DO bloque_sentencias_ejecutables_do UNTIL condicion ')' ';'
 135                      | DO bloque_sentencias_ejecutables_do UNTIL '(' condicion ';'

 136  etiqueta : ID

 137  bloque_sentencias_ejecutables_do : sentencia_ejecutable_do
 138                                   | '{' sentencias_ejecutables_do '}'

 139  sentencias_ejecutables_do : sentencia_ejecutable_do
 140                            | sentencias_ejecutables_do sentencia_ejecutable_do

 141  asignacion : ID ASIGNACION expresion ';'
 142             | ID ASIGNACION ';'
 143             | ID ASIGNACION expresion

 144  sentencia_when : WHEN '(' condicion ')' THEN '{' sentencias_when '}' ';'
 145                 | WHEN '(' condicion ')' '{' sentencias_when '}' ';'

 146  $$2 :

 147  sentencia_when : WHEN '(' ')' THEN '{' sentencias_when '}' ';' $$2 WHEN '(' condicion ')' THEN '{' sentencias_when '}'
 148                 | WHEN '(' condicion ')' '{' sentencias_when '}'
 149                 | WHEN '(' condicion ')' '{' '}'

 150  sentencias_when : sentencia
 151                  | sentencia sentencias_when

 152  seleccion : IF '(' condicion ')' THEN bloque_sentencias_ejecutables_seleccion ENDIF ';'
 153            | IF '(' condicion ')' THEN bloque_sentencias_ejecutables_seleccion ELSE bloque_sentencias_ejecutables_seleccion ENDIF ';'

 154  bloque_sentencias_ejecutables_seleccion : sentencia_ejecutable
 155                                          | '{' sentencias_ejecutables '}'

 156  sentencias_ejecutables : sentencia_ejecutable
 157                         | sentencias_ejecutables sentencia_ejecutable

 158  condicion : expresion comparador expresion
 159            | expresion comparador
 160            | comparador expresion

 161  comparador : COMP_MAYOR_IGUAL
 162             | COMP_MENOR_IGUAL
 163             | COMP_DISTINTO
 164             | '>'
 165             | '<'
 166             | '='

 167  expresion : expresion '+' termino
 168            | expresion '-' termino
 169            | termino

 170  termino : termino '*' factor
 171          | termino '/' factor
 172          | factor

 173  factor : ID
 174         | constante
 175         | invocacion_funcion

 176  invocacion_funcion : ID '(' ')'
 177                     | ID '(' lista_de_parametros_reales ')'

 178  lista_de_parametros_reales : parametro_real
 179                             | lista_de_parametros_reales ',' parametro_real

 180  parametro_real : ID
 181                 | constante

 182  imprimir : OUT '(' CADENA ')' ';'
 183           | OUT '(' ID ')' ';'
 184           | OUT '(' ')' ';'
 185           | OUT CADENA ')' ';'
 186           | OUT '(' CADENA ';'
 187           | OUT ID ')' ';'
 188           | OUT '(' ID ';'
 189           | OUT '(' CADENA ')'
 190           | OUT '(' ID ')'

 191  constante : CTE
 192            | '-' CTE

 193  tipo : UINT16
 194       | DOUBLE64

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	'{'  shift 2
	.  error

	programa  goto 3
	nombre_programa  goto 4


state 1
	nombre_programa : ID .  (6)

	.  reduce 6


state 2
	programa : '{' . sentencias '}'  (2)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	WHEN  shift 9
	DO  shift 10
	DOUBLE64  shift 11
	UINT16  shift 12
	DEFER  shift 13
	CONST  shift 14
	.  error

	sentencias  goto 15
	sentencia  goto 16
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	sentencia_declarativa_variables  goto 19
	funcion_con_return  goto 20
	funcion_sin_return  goto 21
	declaracion_constantes  goto 22
	tipo  goto 23
	lista_de_variables  goto 24
	encabezado_funcion  goto 25
	asignacion  goto 26
	imprimir  goto 27
	etiqueta  goto 28
	seleccion  goto 29
	sentencia_when  goto 30
	sentencia_do  goto 31
	sentencia_do_simple  goto 32


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : nombre_programa . '{' sentencias '}'  (1)
	programa : nombre_programa . sentencias '}'  (3)
	programa : nombre_programa . '{' sentencias  (4)
	programa : nombre_programa . '{' '}'  (5)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	WHEN  shift 9
	DO  shift 10
	DOUBLE64  shift 11
	UINT16  shift 12
	DEFER  shift 13
	CONST  shift 14
	'{'  shift 33
	.  error

	sentencias  goto 34
	sentencia  goto 16
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	sentencia_declarativa_variables  goto 19
	funcion_con_return  goto 20
	funcion_sin_return  goto 21
	declaracion_constantes  goto 22
	tipo  goto 23
	lista_de_variables  goto 24
	encabezado_funcion  goto 25
	asignacion  goto 26
	imprimir  goto 27
	etiqueta  goto 28
	seleccion  goto 29
	sentencia_when  goto 30
	sentencia_do  goto 31
	sentencia_do_simple  goto 32


state 5
	lista_de_variables : ID . ',' lista_de_variables  (19)
	lista_de_variables : ID .  (20)
	etiqueta : ID .  (136)
	asignacion : ID . ASIGNACION expresion ';'  (141)
	asignacion : ID . ASIGNACION ';'  (142)
	asignacion : ID . ASIGNACION expresion  (143)

	ASIGNACION  shift 35
	','  shift 36
	';'  reduce 20
	':'  reduce 136


state 6
	seleccion : IF . '(' condicion ')' THEN bloque_sentencias_ejecutables_seleccion ENDIF ';'  (152)
	seleccion : IF . '(' condicion ')' THEN bloque_sentencias_ejecutables_seleccion ELSE bloque_sentencias_ejecutables_seleccion ENDIF ';'  (153)

	'('  shift 37
	.  error


state 7
	imprimir : OUT . '(' CADENA ')' ';'  (182)
	imprimir : OUT . '(' ID ')' ';'  (183)
	imprimir : OUT . '(' ')' ';'  (184)
	imprimir : OUT . CADENA ')' ';'  (185)
	imprimir : OUT . '(' CADENA ';'  (186)
	imprimir : OUT . ID ')' ';'  (187)
	imprimir : OUT . '(' ID ';'  (188)
	imprimir : OUT . '(' CADENA ')'  (189)
	imprimir : OUT . '(' ID ')'  (190)

	ID  shift 38
	CADENA  shift 39
	'('  shift 40
	.  error


state 8
	encabezado_funcion : FUN . ID '(' ')' ':' tipo  (76)
	encabezado_funcion : FUN . ID '(' lista_de_parametros ')' ':' tipo  (77)
	encabezado_funcion : FUN . ID '(' ')' ':'  (78)
	encabezado_funcion : FUN . '(' ')' ':' tipo  (79)
	encabezado_funcion : FUN . ID ')' ':' tipo  (80)
	encabezado_funcion : FUN . ID '(' ':' tipo  (81)
	encabezado_funcion : FUN . ID '(' lista_de_parametros ')' ':'  (82)
	encabezado_funcion : FUN . '(' lista_de_parametros ')' ':' tipo  (83)
	encabezado_funcion : FUN . ID lista_de_parametros ')' ':' tipo  (84)
	encabezado_funcion : FUN . ID '(' lista_de_parametros ':' tipo  (85)

	ID  shift 41
	'('  shift 42
	.  error


state 9
	sentencia_when : WHEN . '(' condicion ')' THEN '{' sentencias_when '}' ';'  (144)
	sentencia_when : WHEN . '(' condicion ')' '{' sentencias_when '}' ';'  (145)
	sentencia_when : WHEN . '(' ')' THEN '{' sentencias_when '}' ';' $$2 WHEN '(' condicion ')' THEN '{' sentencias_when '}'  (147)
	sentencia_when : WHEN . '(' condicion ')' '{' sentencias_when '}'  (148)
	sentencia_when : WHEN . '(' condicion ')' '{' '}'  (149)

	'('  shift 43
	.  error


state 10
	sentencia_do_simple : DO . bloque_sentencias_ejecutables_do UNTIL '(' condicion ')' ';'  (131)
	sentencia_do_simple : DO . bloque_sentencias_ejecutables_do UNTIL '(' condicion ')'  (132)
	sentencia_do_simple : DO . bloque_sentencias_ejecutables_do UNTIL '(' ')' ';'  (133)
	sentencia_do_simple : DO . bloque_sentencias_ejecutables_do UNTIL condicion ')' ';'  (134)
	sentencia_do_simple : DO . bloque_sentencias_ejecutables_do UNTIL '(' condicion ';'  (135)

	ID  shift 44
	IF  shift 6
	OUT  shift 7
	BREAK  shift 45
	WHEN  shift 9
	DO  shift 10
	CONTINUE  shift 46
	DEFER  shift 13
	'{'  shift 47
	.  error

	sentencia_ejecutable  goto 48
	asignacion  goto 26
	imprimir  goto 27
	etiqueta  goto 28
	sentencia_break  goto 49
	sentencia_continue  goto 50
	seleccion  goto 29
	sentencia_when  goto 30
	sentencia_do  goto 31
	sentencia_ejecutable_do  goto 51
	sentencia_do_simple  goto 32
	bloque_sentencias_ejecutables_do  goto 52


state 11
	tipo : DOUBLE64 .  (194)

	.  reduce 194


state 12
	tipo : UINT16 .  (193)

	.  reduce 193


state 13
	sentencia_ejecutable : DEFER . asignacion  (110)
	sentencia_ejecutable : DEFER . seleccion  (112)
	sentencia_ejecutable : DEFER . imprimir  (114)
	sentencia_ejecutable : DEFER . sentencia_when  (116)
	sentencia_ejecutable : DEFER . sentencia_do  (118)

	ID  shift 44
	IF  shift 6
	OUT  shift 7
	WHEN  shift 9
	DO  shift 10
	.  error

	asignacion  goto 53
	imprimir  goto 54
	etiqueta  goto 28
	seleccion  goto 55
	sentencia_when  goto 56
	sentencia_do  goto 57
	sentencia_do_simple  goto 32


state 14
	declaracion_constantes : CONST . lista_declaracion_constantes ';'  (100)
	declaracion_constantes : CONST . lista_declaracion_constantes  (101)
	declaracion_constantes : CONST . ';'  (102)

	ID  shift 58
	';'  shift 59
	.  error

	lista_declaracion_constantes  goto 60
	declaracion_constante  goto 61


state 15
	programa : '{' sentencias . '}'  (2)
	sentencias : sentencias . sentencia  (8)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	WHEN  shift 9
	DO  shift 10
	DOUBLE64  shift 11
	UINT16  shift 12
	DEFER  shift 13
	CONST  shift 14
	'}'  shift 62
	.  error

	sentencia  goto 63
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	sentencia_declarativa_variables  goto 19
	funcion_con_return  goto 20
	funcion_sin_return  goto 21
	declaracion_constantes  goto 22
	tipo  goto 23
	lista_de_variables  goto 24
	encabezado_funcion  goto 25
	asignacion  goto 26
	imprimir  goto 27
	etiqueta  goto 28
	seleccion  goto 29
	sentencia_when  goto 30
	sentencia_do  goto 31
	sentencia_do_simple  goto 32


state 16
	sentencias : sentencia .  (7)

	.  reduce 7


state 17
	sentencia : sentencia_declarativa .  (9)

	.  reduce 9


state 18
	sentencia : sentencia_ejecutable .  (10)

	.  reduce 10


state 19
	sentencia_declarativa : sentencia_declarativa_variables .  (11)

	.  reduce 11


state 20
	sentencia_declarativa : funcion_con_return .  (12)

	.  reduce 12


state 21
	sentencia_declarativa : funcion_sin_return .  (13)

	.  reduce 13


state 22
	sentencia_declarativa : declaracion_constantes .  (14)

	.  reduce 14


state 23
	sentencia_declarativa_variables : tipo . lista_de_variables ';'  (15)
	sentencia_declarativa_variables : tipo . lista_de_variables  (16)
	sentencia_declarativa_variables : tipo . ';'  (18)

	ID  shift 64
	';'  shift 65
	.  error

	lista_de_variables  goto 66


state 24
	sentencia_declarativa_variables : lista_de_variables . ';'  (17)

	';'  shift 67
	.  error


state 25
	funcion_con_return : encabezado_funcion . '{' sentencia_return '}'  (21)
	funcion_con_return : encabezado_funcion . '{' sentencias_funcion sentencia_return '}'  (22)
	funcion_con_return : encabezado_funcion . '{' '}'  (23)
	funcion_sin_return : encabezado_funcion . '{' sentencia_seleccion_compuesta_con_return '}'  (40)
	funcion_sin_return : encabezado_funcion . '{' sentencias_funcion sentencia_seleccion_compuesta_con_return '}'  (41)

	'{'  shift 68
	.  error


state 26
	sentencia_ejecutable : asignacion .  (109)

	.  reduce 109


state 27
	sentencia_ejecutable : imprimir .  (113)

	.  reduce 113


state 28
	sentencia_do : etiqueta . ':' sentencia_do_simple  (130)

	':'  shift 69
	.  error


state 29
	sentencia_ejecutable : seleccion .  (111)

	.  reduce 111


state 30
	sentencia_ejecutable : sentencia_when .  (115)

	.  reduce 115


state 31
	sentencia_ejecutable : sentencia_do .  (117)

	.  reduce 117


state 32
	sentencia_do : sentencia_do_simple .  (129)

	.  reduce 129


state 33
	programa : nombre_programa '{' . sentencias '}'  (1)
	programa : nombre_programa '{' . sentencias  (4)
	programa : nombre_programa '{' . '}'  (5)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	WHEN  shift 9
	DO  shift 10
	DOUBLE64  shift 11
	UINT16  shift 12
	DEFER  shift 13
	CONST  shift 14
	'}'  shift 70
	.  error

	sentencias  goto 71
	sentencia  goto 16
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	sentencia_declarativa_variables  goto 19
	funcion_con_return  goto 20
	funcion_sin_return  goto 21
	declaracion_constantes  goto 22
	tipo  goto 23
	lista_de_variables  goto 24
	encabezado_funcion  goto 25
	asignacion  goto 26
	imprimir  goto 27
	etiqueta  goto 28
	seleccion  goto 29
	sentencia_when  goto 30
	sentencia_do  goto 31
	sentencia_do_simple  goto 32


state 34
	programa : nombre_programa sentencias . '}'  (3)
	sentencias : sentencias . sentencia  (8)

	ID  shift 5
	IF  shift 6
	OUT  shift 7
	FUN  shift 8
	WHEN  shift 9
	DO  shift 10
	DOUBLE64  shift 11
	UINT16  shift 12
	DEFER  shift 13
	CONST  shift 14
	'}'  shift 72
	.  error

	sentencia  goto 63
	sentencia_declarativa  goto 17
	sentencia_ejecutable  goto 18
	sentencia_declarativa_variables  goto 19
	funcion_con_return  goto 20
	funcion_sin_return  goto 21
	declaracion_constantes  goto 22
	tipo  goto 23
	lista_de_variables  goto 24
	encabezado_funcion  goto 25
	asignacion  goto 26
	imprimir  goto 27
	etiqueta  goto 28
	seleccion  goto 29
	sentencia_when  goto 30
	sentencia_do  goto 31
	sentencia_do_simple  goto 32


state 35
	asignacion : ID ASIGNACION . expresion ';'  (141)
	asignacion : ID ASIGNACION . ';'  (142)
	asignacion : ID ASIGNACION . expresion  (143)

	ID  shift 73
	CTE  shift 74
	'-'  shift 75
	';'  shift 76
	.  error

	expresion  goto 77
	termino  goto 78
	factor  goto 79
	constante  goto 80
	invocacion_funcion  goto 81


state 36
	lista_de_variables : ID ',' . lista_de_variables  (19)

	ID  shift 64
	.  error

	lista_de_variables  goto 82


state 37
	seleccion : IF '(' . condicion ')' THEN bloque_sentencias_ejecutables_seleccion ENDIF ';'  (152)
	seleccion : IF '(' . condicion ')' THEN bloque_sentencias_ejecutables_seleccion ELSE bloque_sentencias_ejecutables_seleccion ENDIF ';'  (153)

	ID  shift 73
	CTE  shift 74
	COMP_MAYOR_IGUAL  shift 83
	COMP_MENOR_IGUAL  shift 84
	COMP_DISTINTO  shift 85
	'-'  shift 75
	'>'  shift 86
	'<'  shift 87
	'='  shift 88
	.  error

	condicion  goto 89
	expresion  goto 90
	comparador  goto 91
	termino  goto 78
	factor  goto 79
	constante  goto 80
	invocacion_funcion  goto 81


state 38
	imprimir : OUT ID . ')' ';'  (187)

	')'  shift 92
	.  error


state 39
	imprimir : OUT CADENA . ')' ';'  (185)

	')'  shift 93
	.  error


state 40
	imprimir : OUT '(' . CADENA ')' ';'  (182)
	imprimir : OUT '(' . ID ')' ';'  (183)
	imprimir : OUT '(' . ')' ';'  (184)
	imprimir : OUT '(' . CADENA ';'  (186)
	imprimir : OUT '(' . ID ';'  (188)
	imprimir : OUT '(' . CADENA ')'  (189)
	imprimir : OUT '(' . ID ')'  (190)

	ID  shift 94
	CADENA  shift 95
	')'  shift 96
	.  error


state 41
	encabezado_funcion : FUN ID . '(' ')' ':' tipo  (76)
	encabezado_funcion : FUN ID . '(' lista_de_parametros ')' ':' tipo  (77)
	encabezado_funcion : FUN ID . '(' ')' ':'  (78)
	encabezado_funcion : FUN ID . ')' ':' tipo  (80)
	encabezado_funcion : FUN ID . '(' ':' tipo  (81)
	encabezado_funcion : FUN ID . '(' lista_de_parametros ')' ':'  (82)
	encabezado_funcion : FUN ID . lista_de_parametros ')' ':' tipo  (84)
	encabezado_funcion : FUN ID . '(' lista_de_parametros ':' tipo  (85)
	$$1 : .  (98)

	DOUBLE64  shift 11
	UINT16  shift 12
	'('  shift 97
	')'  shift 98
	ID  reduce 98

	tipo  goto 99
	lista_de_parametros  goto 100
	parametro  goto 101
	$$1  goto 102


state 42
	encabezado_funcion : FUN '(' . ')' ':' tipo  (79)
	encabezado_funcion : FUN '(' . lista_de_parametros ')' ':' tipo  (83)
	$$1 : .  (98)

	DOUBLE64  shift 11
	UINT16  shift 12
	')'  shift 103
	ID  reduce 98

	tipo  goto 99
	lista_de_parametros  goto 104
	parametro  goto 101
	$$1  goto 102


state 43
	sentencia_when : WHEN '(' . condicion ')' THEN '{' sentencias_when '}' ';'  (144)
	sentencia_when : WHEN '(' . condicion ')' '{' sentencias_when '}' ';'  (145)
	sentencia_when : WHEN '(' . ')' THEN '{' sentencias_when '}' ';' $$2 WHEN '(' condicion ')' THEN '{' sentencias_when '}'  (147)
	sentencia_when : WHEN '(' . condicion ')' '{' sentencias_when '}'  (148)
	sentencia_when : WHEN '(' . condicion ')' '{' '}'  (149)

	ID  shift 73
	CTE  shift 74
	COMP_MAYOR_IGUAL  shift 83
	COMP_MENOR_IGUAL  shift 84
	COMP_DISTINTO  shift 85
	'-'  shift 75
	')'  shift 105
	'>'  shift 86
	'<'  shift 87
	'='  shift 88
	.  error

	condicion  goto 106
	expresion  goto 90
	comparador  goto 91
	termino  goto 78
	factor  goto 79
	constante  goto 80
	invocacion_funcion  goto 81


state 44
	etiqueta : ID .  (136)
	asignacion : ID . ASIGNACION expresion ';'  (141)
	asignacion : ID . ASIGNACION ';'  (142)
	asignacion : ID . ASIGNACION expresion  (143)

	ASIGNACION  shift 35
	':'  reduce 136


state 45
	sentencia_break : BREAK . ';'  (122)
	sentencia_break : BREAK . ':' etiqueta ';'  (123)
	sentencia_break : BREAK .  (124)
	sentencia_break : BREAK . ':' etiqueta  (125)
	sentencia_break : BREAK . ':' ';'  (126)

	';'  shift 107
	':'  shift 108
	ID  reduce 124
	IF  reduce 124
	OUT  reduce 124
	RETURN  reduce 124
	BREAK  reduce 124
	WHEN  reduce 124
	DO  reduce 124
	UNTIL  reduce 124
	CONTINUE  reduce 124
	DEFER  reduce 124
	'}'  reduce 124


state 46
	sentencia_continue : CONTINUE . ';'  (127)
	sentencia_continue : CONTINUE .  (128)

	';'  shift 109
	ID  reduce 128
	IF  reduce 128
	OUT  reduce 128
	RETURN  reduce 128
	BREAK  reduce 128
	WHEN  reduce 128
	DO  reduce 128
	UNTIL  reduce 128
	CONTINUE  reduce 128
	DEFER  reduce 128
	'}'  reduce 128


state 47
	bloque_sentencias_ejecutables_do : '{' . sentencias_ejecutables_do '}'  (138)

	ID  shift 44
	IF  shift 6
	OUT  shift 7
	BREAK  shift 45
	WHEN  shift 9
	DO  shift 10
	CONTINUE  shift 46
	DEFER  shift 13
	.  error

	sentencia_ejecutable  goto 48
	asignacion  goto 26
	imprimir  goto 27
	etiqueta  goto 28
	sentencia_break  goto 49
	sentencia_continue  goto 50
	seleccion  goto 29
	sentencia_when  goto 30
	sentencia_do  goto 31
	sentencia_ejecutable_do  goto 110
	sentencia_do_simple  goto 32
	sentencias_ejecutables_do  goto 111


state 48
	sentencia_ejecutable_do : sentencia_ejecutable .  (119)

	.  reduce 119


state 49
	sentencia_ejecutable_do : sentencia_break .  (120)

	.  reduce 120


state 50
	sentencia_ejecutable_do : sentencia_continue .  (121)

	.  reduce 121


state 51
	bloque_sentencias_ejecutables_do : sentencia_ejecutable_do .  (137)

	.  reduce 137


state 52
	sentencia_do_simple : DO bloque_sentencias_ejecutables_do . UNTIL '(' condicion ')' ';'  (131)
	sentencia_do_simple : DO bloque_sentencias_ejecutables_do . UNTIL '(' condicion ')'  (132)
	sentencia_do_simple : DO bloque_sentencias_ejecutables_do . UNTIL '(' ')' ';'  (133)
	sentencia_do_simple : DO bloque_sentencias_ejecutables_do . UNTIL condicion ')' ';'  (134)
	sentencia_do_simple : DO bloque_sentencias_ejecutables_do . UNTIL '(' condicion ';'  (135)

	UNTIL  shift 112
	.  error


state 53
	sentencia_ejecutable : DEFER asignacion .  (110)

	.  reduce 110


state 54
	sentencia_ejecutable : DEFER imprimir .  (114)

	.  reduce 114


state 55
	sentencia_ejecutable : DEFER seleccion .  (112)

	.  reduce 112


state 56
	sentencia_ejecutable : DEFER sentencia_when .  (116)

	.  reduce 116


state 57
	sentencia_ejecutable : DEFER sentencia_do .  (118)

	.  reduce 118


state 58
	declaracion_constante : ID . ASIGNACION CTE  (105)
	declaracion_constante : ID . ASIGNACION  (106)
	declaracion_constante : ID . CTE  (107)
	declaracion_constante : ID .  (108)

	CTE  shift 113
	ASIGNACION  shift 114
	$end  reduce 108
	ID  reduce 108
	IF  reduce 108
	OUT  reduce 108
	FUN  reduce 108
	RETURN  reduce 108
	WHEN  reduce 108
	DO  reduce 108
	DOUBLE64  reduce 108
	UINT16  reduce 108
	DEFER  reduce 108
	CONST  reduce 108
	'}'  reduce 108
	';'  reduce 108
	','  reduce 108


state 59
	declaracion_constantes : CONST ';' .  (102)

	.  reduce 102

